--- a/index.html
+++ b/index.html
@@ -1,18 +1,37 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Your Name</title>
-  <style>
-    body {
-      font-family: sans-serif;
-      text-align: center;
-      padding: 100px;
-      background-color: #f5f5f5;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>Hello, I’m Your Name</h1>
-  <p>This is my first website. Stay tuned!</p>
+  <header>
+    <h1>Hello, I’m Adrianna Bryan</h1>
+    <p>I’m a psychology + data science grad exploring AI, HCI, and mental health tech.</p>
+  </header>
+  <main>
+    <section>
+      <h2>About Me</h2>
+      <p>I'm passionate about the intersection of psychology and AI. With a background in data science and UX, I’m currently building tools that make mental health support more accessible and effective.</p>
+    </section>
+    <section>
+      <h2>Projects</h2>
+      <ul>
+        <li>PAPI - Cocktail Generator</li>
+        <li>Mental Health Chat Bot</li>
+      </ul>
+    </section>
+  </main>
+  <footer>
+    <p>© 2025 Adrianna Bryan</p>
+  </footer>
+  <section>
+      <h2>Contact</h2>
+        <p>Email: <a href="adrianna.bryan12@gmail.com">you@example.com</a></p>
+        <p>GitHub: <a href="https://github.com/yourusername">yourusername</a></p>
+        <p>LinkedIn: <a href="https://linkedin.com/in/adriannaxbryan">yourprofile</a></p>
+    </section>
 </body>
 </html>
